--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!--    <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">B</span>-->
     <p class="lead">This website contains development resources for developing services for the Maritime Cloud.</p>
 
-<p class="lead">Goto our guide on the <a href="./devguide/index.html">Identity Registry</a> to get started with using the Maritime Clouds identity solution.</p>    
+<p class="lead">Goto our guide on the <a href="./identity/index.html">Identity Registry</a> to get started with using the Maritime Clouds identity solution.</p>    
 
 <p class="lead">Or go to our <a href="https://groups.google.com/forum/#!forum/maritimecloud">Google Group</a> forum for questions about developing applications for the Maritime Cloud.</p>    
 <!--
