--- a/identity/index.html
+++ b/identity/index.html
@@ -562,7 +562,7 @@ MathJax.Hub.Config({
 <p>Please do not email us directly about usage questions. Instead use our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimecloud" class="bare">https://groups.google.com/forum/#!forum/maritimecloud</a> for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.</p>
 </div>
 <div class="paragraph">
-<p>This developer guide is intended to make you familiar with developing secure applications and services for the Maritime Cloud. In addition to this developer guide the whitepaper available at <a href="http://dev.maritimecloud.net/apidocs/" class="bare">http://dev.maritimecloud.net/apidocs/</a> is a good read.</p>
+<p>This developer guide is intended to make you familiar with developing secure applications and services for the Maritime Cloud. In addition to this developer guide the whitepaper available at <a href="http://developers.maritimecloud.net/Identity%20Management%20and%20Security%20White%20Paper.docx" class="bare">http://developers.maritimecloud.net/Identity%20Management%20and%20Security%20White%20Paper.docx</a> is a good read.</p>
 </div>
 <div class="sect2">
 <h3 id="a-bit-of-history"><a class="anchor" href="#a-bit-of-history"></a>1.1. A Bit of History</h3>
@@ -623,7 +623,7 @@ As part of the e-Navigation process the Danish Maritime Authority had been worki
 <div class="sect2">
 <h3 id="feedback"><a class="anchor" href="#feedback"></a>1.3. Feedback</h3>
 <div class="paragraph">
-<p>Readers may send feedback about errors, omissions, and ambiguities in this guide to <a href="mailto:kasperni@gmail.com">kasperni@gmail.com</a> or even better submit a pull request to the documentation available at <a href="http://developers.maritimecloud.net/Identity%20Management%20and%20Security%20White%20Paper.docx" class="bare">http://developers.maritimecloud.net/Identity%20Management%20and%20Security%20White%20Paper.docx</a></p>
+<p>Readers may send feedback about errors, omissions, and ambiguities in this guide to <a href="mailto:kasperni@gmail.com">kasperni@gmail.com</a> or even better submit a pull request to the documentation available at <a href="https://github.com/MaritimeCloud/Documentation/tree/master/developer-guide/adoc" class="bare">https://github.com/MaritimeCloud/Documentation/tree/master/developer-guide/adoc</a>.</p>
 </div>
 <div class="paragraph">
 <p>As previously mentioned questions about usage of the Maritime Cloud should be directed to our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimecloud" class="bare">https://groups.google.com/forum/#!forum/maritimecloud</a></p>
@@ -1033,7 +1033,7 @@ As part of the e-Navigation process the Danish Maritime Authority had been worki
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-05-03 21:14:30 CEST
+Last updated 2016-05-03 21:19:27 CEST
 </div>
 </div>
 </body>
