--- a/identity/index.html
+++ b/identity/index.html
@@ -562,7 +562,7 @@ MathJax.Hub.Config({
 <p>Please do not email us directly about usage questions. Instead use our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimecloud" class="bare">https://groups.google.com/forum/#!forum/maritimecloud</a> for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.</p>
 </div>
 <div class="paragraph">
-<p>This developer guide is intended to make you familiar with developing secure applications and services for the Maritime Cloud. In addition to this developer guide the whitepaper available at <a href="http://developers.maritimecloud.net/Identity%20Management%20and%20Security%20White%20Paper.docx" class="bare">http://developers.maritimecloud.net/Identity%20Management%20and%20Security%20White%20Paper.docx</a> is a good read.</p>
+<p>This developer guide is intended to make you familiar with developing secure applications and services for the Maritime Cloud. In addition to this developer guide this <a href="http://developers.maritimecloud.net/Identity%20Management%20and%20Security%20White%20Paper.docx">whitepaper</a> is a good read.</p>
 </div>
 <div class="sect2">
 <h3 id="a-bit-of-history"><a class="anchor" href="#a-bit-of-history"></a>1.1. A Bit of History</h3>
@@ -1033,7 +1033,7 @@ As part of the e-Navigation process the Danish Maritime Authority had been worki
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-05-03 21:21:53 CEST
+Last updated 2016-05-03 21:22:00 CEST
 </div>
 </div>
 </body>
