--- a/identity/index.html
+++ b/identity/index.html
@@ -541,7 +541,11 @@ MathJax.Hub.Config({
 <li><a href="#overview-2">3.1. Overview</a></li>
 </ul>
 </li>
-<li><a href="#openid-connect">4. OpenID Connect</a></li>
+<li><a href="#users-and-passwords">4. Users and passwords</a>
+<ul class="sectlevel2">
+<li><a href="#openid-connect">4.1. OpenID Connect</a></li>
+</ul>
+</li>
 <li><a href="#user-federation">5. User Federation</a>
 <ul class="sectlevel2">
 <li><a href="#keycloack">5.1. Keycloack</a></li>
@@ -554,6 +558,7 @@ MathJax.Hub.Config({
 </ul>
 </li>
 <li><a href="#authorization">7. Authorization</a></li>
+<li><a href="#terminology">8. Terminology</a></li>
 </ul>
 </div>
 </div>
@@ -811,8 +816,13 @@ Coastguard, Swedish Maritime Administration. Local authorities such as VTS-Oeres
 </div>
 </div>
 <div class="sect1">
-<h2 id="openid-connect"><a class="anchor" href="#openid-connect"></a>4. OpenID Connect</h2>
+<h2 id="users-and-passwords"><a class="anchor" href="#users-and-passwords"></a>4. Users and passwords</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>In the previous section we discussed digital certificates for use in machine to machine communication. There are no technical issues to why human users should not be able to use digital certificates to authenticate themselves as well. However, there are some serious practical ones that make it difficult to see them as a general solution for human user authentication. The first issue being that it requires that the certificate must always be present on the computer or mobile phone from which access is made. This is normally not a problem for machine to machine communication. Because, once installed the hardware configuration almost never changes. Unlike human users that uses their computer during the day to access information, their mobile phone on the way back from work and their tablet in the evening from home. Making sure that certificates are all installed on these devices and refreshing them once they expire is a lot of effort to require of users. And we believe having such a complicated setup would be a major barrier towards successful adoption of the Maritime Cloud. So for now, username and passwords are the main technology used for human authentication in the Maritime Cloud. In the future as standards and hardware support for something like biometrics (fingerprints, iris scanning) evolve these will likely be supported as well.</p>
+</div>
+<div class="sect2">
+<h3 id="openid-connect"><a class="anchor" href="#openid-connect"></a>4.1. OpenID Connect</h3>
 <div class="paragraph">
 <p><a href="http://openid.net/">OpenID Connect</a> is an interoperable authentication protocol based on the <a href="http://oauth.net/2/">OAuth 2.0</a> family of specifications. It uses straightforward REST/JSON message flows with a design goal of “making simple things simple and complicated things possible”. It’s uniquely easy for developers to integrate, compared to any preceding Identity protocol.</p>
 </div>
@@ -872,6 +882,7 @@ Coastguard, Swedish Maritime Administration. Local authorities such as VTS-Oeres
 </tr>
 </tbody>
 </table>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -1134,6 +1145,49 @@ The functionality of the Identity Broker is the cornerstone in the Maritime Clou
 <div class="paragraph">
 <p>Given these issues and many other we have to decide to wait on the various to sub projects to implement authorization and then compile all the different approaches and try and make something generic.</p>
 </div>
+<div style="page-break-after: always;"></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="terminology"><a class="anchor" href="#terminology"></a>8. Terminology</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Most of the terminology in this section has been taken from ISO/IEC 24760-1:2011 - A framework for identity management - Terminology and concepts</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Authentication:</strong> The process of verifying the identity claimed by an entity based on its credentials.</p>
+</li>
+<li>
+<p><strong>Authorization:</strong> The process of establishing a specific entitlement that is consistent with authorization policies.</p>
+</li>
+<li>
+<p><strong>Authorization policies:</strong> Declarations that define entitlements of a security principal and any constraints related to that entitlement.</p>
+</li>
+<li>
+<p><strong>Entitlements:</strong> The actions an entity in a network is allowed to perform and the resources to which it is allowed access.</p>
+</li>
+<li>
+<p><strong>Federated identity:</strong> Is the means of linking a person&#8217;s electronic identity and attributes, stored across multiple distinct identity management systems</p>
+</li>
+<li>
+<p><strong>Identity:</strong> The set of attributes that uniquely identifies a security principal. A security principal can have many different accounts that it uses to access various applications in the network. These accounts can be identified by these applications using different attributes of this entity. For example, a user can be known in the e-mail service by an e-mail ID, whereas that same user can be known in the human resource application by an employee number. The global set of such attributes constitutes the identity of the entity.</p>
+</li>
+<li>
+<p><strong>Identity administration:</strong> The act of managing information associated with the identity of a security principal. The information can be used by the identity management infrastructure itself to determine administrative privileges.</p>
+</li>
+<li>
+<p><strong>Identity management policies:</strong> Policies affecting the management of identities which includes naming policies and security policies.</p>
+</li>
+<li>
+<p><strong>Realm:</strong> A collection of identities and associated policies which is typically used when enterprises want to isolate user populations and enforce different identity management policies for each population.</p>
+</li>
+<li>
+<p><strong>Security principals:</strong> The subjects of authorization policies, such as users, user groups, and roles. A security principal can be a human or any application entity with an identity in the network and credentials to assert the identity.</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
@@ -1145,7 +1199,7 @@ The functionality of the Identity Broker is the cornerstone in the Maritime Clou
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-05-04 14:21:36 CEST
+Last updated 2016-05-04 14:36:30 CEST
 </div>
 </div>
 </body>
